<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/customtaxidriver_tv_drivertimedistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:gravity="center"
        android:text="@string/custommitaxi_tv_drivertimedistance"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/customtaxidriver_iv_driverphoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/customtaxidriver_tv_drivertype"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/generic_amarillo"
                android:text="@string/customtaxidriver_tv_drivertype"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/customtaxidriver_btn_selectdriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_generic"
                android:textColor="@drawable/selector_btn_textcolor"
                android:text="@string/customtaxidriver_btn_selectdriver" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/customtaxidriver_sv_containerinfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:padding="5dp">

            <TextView
                android:id="@+id/customtaxidriver_tv_drivername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/generic_amarillo"
                android:text="@string/customtaxidriver_tv_drivername"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/customtaxidriver_tv_driverid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/customtaxidriver_tv_driverid"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/customtaxidriver_tv_driveridvalidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/customtaxidriver_tv_driveridvalidity"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/customtaxidriver_tv_driverantiquity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/customtaxidriver_tv_driverantiquity"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/customtaxidriver_tv_driverranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/customtaxidriver_tv_driverranking"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/customtaxidriver_tv_drivertaxiplaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/customtaxidriver_tv_drivertaxiplaca"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/customtaxidriver_tv_drivertaximodel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/customtaxidriver_tv_drivertaximodel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/customtaxidriver_tv_drivernuminfrac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/customtaxidriver_tv_drivernuminfrac"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>