<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable1"
    tools:context=".MitaxiRegisterManuallyActivity" >

    <TextView
        android:id="@+id/mitaxiregistermanually_tv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/mitaxiregister_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/generic_amarillo"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/mitaxiregistermanually_sv_container_infouser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mitaxiregistermanually_tv_label"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/rounded_background"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/mitaxiregistermanually_ll_container_infouser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/mitaxiregistermanually_et_infousername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/mitaxiregister_et_name_hint"
                android:inputType="textPersonName|textCapWords"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" >
            </EditText>

            <EditText
                android:id="@+id/mitaxiregistermanually_et_infouseremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/mitaxiregister_et_email_hint"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/mitaxiregistermanually_et_infouserteluser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/mitaxiregister_et_teluser_hint"
                android:inputType="phone"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/mitaxiregistermanually_et_infousertelemergency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/mitaxiregister_et_telemergency_hint"
                android:inputType="phone"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/mitaxiregistermanually_et_infousermailemergency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/mitaxiregister_et_mailemergency_hint"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <Button
            android:id="@+id/mitaxiregistermanually_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_generic"
            android:text="@string/mitaxiregister_btn_cancel"
            android:textColor="@drawable/selector_txt_boton_redondo"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mitaxiregistermanually_btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_generic"
            android:text="@string/mitaxiregister_btn_ok"
            android:textColor="@drawable/selector_txt_boton_redondo"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/mitaxiregistermanually_btn_paraque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mitaxiregistermanually_sv_container_infouser"
        android:layout_below="@+id/mitaxiregistermanually_sv_container_infouser"
        android:layout_marginTop="15dp"
        android:text="@string/mitaxiregister_et_paraque"
        android:textColor="@color/generic_amarillo" />

</RelativeLayout>