<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8" >

        <fragment
            android:id="@+id/mitaxi_trip_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            class="com.google.android.gms.maps.MapFragment" />

        <ImageButton
            android:id="@+id/mitaxi_trip_btn_driverPosition"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/content_description"
            android:scaleType="centerInside"
            android:src="@drawable/mi_taxi_assets_taxi_off" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mitaxi_trip_ll_driverinfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:background="@color/generic_amarillo"
        android:orientation="horizontal"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/mitaxi_trip_"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/mitaxi_trip_iv_driverpicture"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/mitaxi_trip_tv_wrongdriver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitaxi_trip_tv_wrongdriver" />
        </LinearLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/mitaxi_trip_tv_drivername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/mitaxi_trip_tv_drivername"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mitaxi_trip_tv_drivertaxiid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mitaxi_trip_tv_drivertaxiid" />

                <TextView
                    android:id="@+id/mitaxi_trip_tv_drivertaximodel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/mitaxi_trip_tv_drivertaximodel" />

            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.30"
            android:layout_gravity="bottom"
            android:orientation="vertical"  >

                <Button
                    android:id="@+id/mitaxi_trip_btn_starttrip"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="2dp"
                    android:background="@drawable/selector_btn_generic"
                    android:text="@string/mitaxi_trip_btn_starttrip"
                    android:textColor="@drawable/selector_txt_boton_redondo" />

            </LinearLayout>
    </LinearLayout>

</LinearLayout>