<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient_drawable1"
    tools:context=".MitaxiActivity" 
>
    
    <TextView
        android:id="@+id/mitaxi_register_tv_appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
        android:id="@+id/mitaxi_register_btn_manually"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mitaxi_register_tv_o"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="90dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/selector_btn_generic"
        android:textColor="@drawable/selector_txt_boton_redondo"
        android:textStyle="bold"
        android:text="@string/mitaxiregister_btn_manually" />
    
    <TextView
        android:id="@+id/mitaxi_register_tv_o"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mitaxi_register_ibtn_googleplus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:gravity="left"
        android:textColor="@color/generic_amarillo"
        android:text="@string/mitaxiregister_tv_o"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ImageButton
        android:id="@+id/mitaxi_register_ibtn_googleplus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/selector_btn_googleplus"
        android:contentDescription="@string/mitaxiregister_btn_googleplus"
        android:src="@drawable/ic_googleplus_white" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mitaxi_register_btn_manually"
        android:layout_below="@+id/mitaxi_register_tv_appname"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icono" />

</RelativeLayout>
